# -Furgal-AI-Early-Stopping

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  __init__.py  base_early_stopping.py  component_early_stopping.py  download_papers.py  dp_early_stopping.py  earlystopping_pynb (1).ipynb  fairness_early_stopping.py  hello_world_results.json  proximal_early_stopping.py  pyproject.toml  pytest.ini  rkhs_gradient_descent.py  rkhs_light_results.json  run_quick_start.py  run_rkhs_experiments.py  run_rkhs_light.py  setup.py  setup.sh  visualize_results.py
.github/workflows/: tests.yml
Bibliography/: ESSENTIAL_PAPERS_LIST.md
Implementations/: __init__.py  rkhs_gradient_descent.py
benchmarks/: performance_benchmarks.py
examples/: 01_synthetic_rkhs.py  README.md  example_component.py  example_dp.py  example_fairness.py  example_proximal.py
experiments/: run_experiments.py
tests/: test_basic.py  test_early_stopping.py  test_rkhs.py
visualizations/: advanced_plots.py
